--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
         "dayjs": "^1.11.13",
         "framer-motion": "^11.13.1",
         "lucide-react": "^0.465.0",
+        "openai": "^4.83.0",
         "react-hook-form": "^7.53.2",
         "react-router-dom": "^7.0.2",
         "react-stars": "^2.2.5",
-        "sweetalert2": "^11.15.10",
+        "sweetalert2": "^11.6.13",
         "swiper": "^11.1.15",
         "yup": "^1.5.0"
     }
