--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "react-hook-form": "^7.53.2",
         "react-router-dom": "^7.0.2",
         "react-stars": "^2.2.5",
+        "react-toastify": "^11.0.5",
         "sweetalert2": "^11.6.13",
         "swiper": "^11.1.15",
         "yup": "^1.5.0"
