--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     },
     "dependencies": {
         "@hookform/resolvers": "^3.9.1",
+        "compressorjs": "^1.2.1",
         "dayjs": "^1.11.13",
         "framer-motion": "^11.13.1",
         "lucide-react": "^0.465.0",
         "openai": "^4.83.0",
         "react-hook-form": "^7.53.2",
+        "react-hot-toast": "^2.5.2",
+        "react-phone-input-2": "^2.15.1",
         "react-router-dom": "^7.0.2",
         "react-stars": "^2.2.5",
         "react-toastify": "^11.0.5",
