Add runtime: php to render.yaml
Added runtime configuration for PHP in render.yaml.

--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,10 @@ services:
     name: jobest
     plan: free
     
-    # تم إزالة env: php بالكامل
+    # *********************************
+    # * تم إضافة سطر runtime: php *
+    # *********************************
+    runtime: php 
     
     rootDir: .
     
